Fixed Footers And SidePanels

--- a/speakers/speaker1.html
+++ b/speakers/speaker1.html
@@ -18,10 +18,10 @@
             <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
                 <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
             </button>
-            <div style="font-family: 'Segoe UI' ,Arial, Helvetica, sans-serif;">
-                <span style="color: red;">TEDx</span><span style="color: white">REVAUniversity</span><br>
+            <a href="../index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
+                <span style="color: red; font-weight: 900;">TED<sup>x</sup></span><span style="color: white">REVAUniversity</span><br>
                 <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
-            </div>
+            </button></a>
         </div>  
         <br>
         <div class="page_container" id="slide1">
@@ -59,12 +59,16 @@
         <button class="primary_red right ta_center mod_close_btn" onclick="closeside1();">X</button><br><br><br>
         <div class="page_container">
             <a href="../index.html"><div class="large12 panel_item">Home</div></a>
-            <a href="../partners/partner.html"><div class="large12 panel_item">Partners</div></a>
-            <a href="../speakers/speaker1.html"><div class="large12 panel_item">Speakers</div></a>
-            <a href="../index.html"><div class="large12 panel_item">Schedule</div></a>
-            <a href="../index.html"><div class="large12 panel_item">About</div></a>
-            <a href="../social/social.html"><div class="large12 panel_item">Social</div></a>
             <a href="../2019.html"><div class="large12 panel_item">Watch Previous Talks</div></a>
+            <a href="../speakers/speaker1.html"><div class="large12 panel_item">Speakers</div></a>
+<!--            <a href="../index.html"><div class="large12 panel_item">Schedule</div></a>-->
+            <a href="../team/team.html"><div class="large12 panel_item">Team</div></a>
+            <a href="../partners/partner.html"><div class="large12 panel_item">Partners</div></a>
+        </div>
+        <div style="position: absolute; bottom: 10px">
+            <p>
+                &copy <span style="color: red;">TED<sup>x</sup></span>REVAUniversity 2020
+            </p>
         </div>
     </div>
 </div>
