--- a/2019.html
+++ b/2019.html
@@ -14,16 +14,16 @@
 </head>
 <body class="primary_inverted">
 <div id="body">
-    <div class="topnav zi2 primary_inverted" style="padding: 10px 15px; position: sticky; top: 2px;">
-        <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
+    <div class="topnav zi2 primary_inverted" style="padding: 0px 15px; position: sticky; top: 0px;">
+        <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white; font-size: 20px; margin-top: 15px;">
             <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
         </button>
         <a href="./index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
             <span style="color: red; font-weight: 900;">TED<sup>x</sup></span><span style="color: white">REVAUniversity</span><br>
             <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
         </button></a>
-    </div>  
-                <div class="page_container">
+    </div>        
+            <div class="page_container">
                     <h1>Watch Previous Talks </h1><br><br>
                     <div class="column large4 medium4 small12" style="margin-bottom: 10px; background: #3a3a3a">
                          
