--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body class="primary_inverted">
       
 <div id="body">
-        <div class="topnav zi2 primary_inverted" style="padding: 10px 15px; position: sticky; top: 2px;">
-            <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
+        <div class="topnav zi2 primary_inverted" style="padding: 0px 15px; position: sticky; top: 0px;">
+            <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white; font-size: 20px; margin-top: 15px;">
                 <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
             </button>
             <a href="./index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
