--- a/partners/partner.html
+++ b/partners/partner.html
@@ -11,15 +11,15 @@
     </head>
     <body style="background: white;">
 <div id="body">
-    <div class="topnav zi2 primary_inverted" style="padding: 10px 15px; position: sticky; top: 2px;">
-        <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
+    <div class="topnav zi2 primary_inverted" style="padding: 0px 15px; position: sticky; top: 0px;">
+        <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white; font-size: 20px; margin-top: 15px;">
             <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
         </button>
-        <a href="../index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
+        <a href="./index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
             <span style="color: red; font-weight: 900;">TED<sup>x</sup></span><span style="color: white">REVAUniversity</span><br>
             <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
         </button></a>
-</div> 
+    </div>        
     <div class="page_container"> 
         <h2>Partners</h2>
         <div class="title_sponsors center">
