--- a/speakers/speaker1.html
+++ b/speakers/speaker1.html
@@ -14,16 +14,16 @@
 
     <body class="primary_inverted" onload="showslide1();">
 <div id="body">
-        <div class="topnav zi2 primary_inverted" style="padding: 10px 15px; position: sticky; top: 2px;">
-            <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
-                <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
-            </button>
-            <a href="../index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
-                <span style="color: red; font-weight: 900;">TED<sup>x</sup></span><span style="color: white">REVAUniversity</span><br>
-                <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
-            </button></a>
-        </div>  
-        <br>
+    <div class="topnav zi2 primary_inverted" style="padding: 0px 15px; position: sticky; top: 0px;">
+        <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white; font-size: 20px; margin-top: 15px;">
+            <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
+        </button>
+        <a href="./index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
+            <span style="color: red; font-weight: 900;">TED<sup>x</sup></span><span style="color: white">REVAUniversity</span><br>
+            <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
+        </button></a>
+    </div>        
+    <br>
         <div class="page_container" id="slide1">
             <div class="column large1 medium1 small1"><button style="position: absolute; top: 45%;" class="icon-large circular primary_red" disabled><i aria-hidden="false" class="ms-Icon ms-Icon--ChevronLeftMed" onclick="showslide3();"></i></button></div>
             <div class="column large10 medium9 small10"><img style="background: linear-gradient(45deg, red, orange);" src="bigxphone.png" alt="" class="spkimg center"></div>
