Fixed Links In Topnav

--- a/team/team.html
+++ b/team/team.html
@@ -19,7 +19,7 @@
             <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white; font-size: 20px; margin-top: 15px;">
                 <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
             </button>
-            <a href="./index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
+            <a href="../index.html"><button style="font-family: Arial, Helvetica, sans-serif;" class="primary_inverted">
                 <span style="color: red; font-weight: 900;">TED<sup>x</sup></span><span style="color: white">REVAUniversity</span><br>
                 <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
             </button></a>
