--- a/2019.html
+++ b/2019.html
@@ -111,6 +111,22 @@
                                     <br>
                         </div> 
                     </div>
+                    <div class="column large4 medium4 small12" style="margin-bottom: 10px; background: #3a3a3a">
+                        <div class="10">
+                            <iframe  style="width: 100%; height: 250px;" src="https://www.youtube.com/embed/5kfZpremw38" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            </iframe><br>
+                            <span class="tagline">Sunny Strat</span>
+                                    <br>
+                        </div> 
+                    </div>
+                    <div class="column large4 medium4 small12" style="margin-bottom: 10px; background: #3a3a3a">
+                        <div class="10">
+                            <iframe  style="width: 100%; height: 250px;" src="https://www.youtube.com/embed/tS6In9eNlm8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            </iframe><br>
+                            <span class="tagline">Tanmay Dattani</span>
+                                    <br>
+                        </div> 
+                    </div>
 
                 <br><br>
 </div>      
