--- a/team/team.html
+++ b/team/team.html
@@ -157,14 +157,14 @@
                     <div class="column large6 medium6 small12" style="overflow-y: auto;">
 
                         <div class="overlay_container column large9 medium9 small12 center">
-                            <img class="overlay_content" src="./mem/Apurva Majumdar - Marketing & Design.jpeg">
+                            <img class="overlay_content" src="./mem/Apurva Majumdar - Marketing.jpeg">
                             <div class="overlay">
                                 <h1 class="ta_center">Apurva Majumdar</h1>
                             </div>
                         </div>
                         
                         <div class="overlay_container column large9 medium9 small12 center">
-                            <img class="overlay_content" src="./mem/Ujjwal Nayan - Marketing.jpeg">
+                            <img class="overlay_content" src="./mem/Ujjawal Nayan - Marketing.jpeg">
                             <div class="overlay">
                                 <h1 class="ta_center">Ujjwal Nayan</h1>
                             </div>
@@ -355,7 +355,7 @@
                     <div class="column large6 medium6 small12" style="overflow-y: auto;">
 
                         <div class="overlay_container column large9 medium9 small12 center">
-                            <img class="overlay_content" src="./mem/Apurva Majumdar - Marketing & Design.jpeg">
+                            <img class="overlay_content" src="./mem/Apurva Majumdar - Marketing.jpeg">
                             <div class="overlay">
                                 <h1 class="ta_center">Apurva Majumdar</h1>
                             </div>
@@ -399,7 +399,7 @@
                     <div class="column large6 medium6 small12" style="overflow-y: auto;">
 
                         <div class="overlay_container column large9 medium9 small12 center">
-                            <img class="overlay_content" src="./mem/Ujjwal Nayan - Marketing.jpeg">
+                            <img class="overlay_content" src="./mem/Ujjawal Nayan - Marketing.jpeg">
                             <div class="overlay">
                                 <h1 class="ta_center">Ujjwal Nayan</h1>
                             </div>
