--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
         <link href="./extra.css" type="text/css" rel="stylesheet">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
+        <link rel="icon" href="tedx.ico">
     </head>
 
     <body class="primary_inverted">
